--- a/first-index.html
+++ b/first-index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/Logo-57x57.png">
+    <link rel="stylesheet" href="./plugins/css/all.min.css">
     <link rel="stylesheet" href="./css/first_index-CSS/style.css">
     <link rel="stylesheet" href="./css/first_index-CSS/media.css">
-    <link rel="stylesheet" href="./plugins/css/all.min.css">
     <title>STREET 88</title>
 </head>
 <body>
@@ -24,11 +24,16 @@
         <div class="bottom__nav">
             <div class="bottom__nav_lists container">
                 <a href="#" class="bottom__nav_logo">STREET 88</a>
+                <button class="bottom__nav_btn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             <ul class="nav__list">
                 <li class="nav__list_links"><a href="">Главная</a></li>
                 <li class="nav__list_links"><a href="">Корзина</a></li>
                 <li class="nav__list_links"><a href="">Меню</a></li>
-                <li class="nav__list_links"><a href="./second_index.html">О нас</a></li>
+                <li class="nav__list_links"><a href="./second-index.html">О нас</a></li>
                 <li class="nav__list_links"><a href="">Контакты</a></li>
             </ul>
             </div>                
