--- a/second-index.html
+++ b/second-index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/Logo-57x57.png">
     <link rel="stylesheet" href="./plugins/css/all.min.css">
-    <link rel="stylesheet" href="./css/second_index-CSS/second_index.css">
+    <link rel="stylesheet" href="./css/second_index-CSS/style.css">
     <link rel="stylesheet" href="./css/second_index-CSS/media.css">   
     <title>STREET 88</title>
 </head>
@@ -25,10 +25,10 @@
             <div class="bottom__nav_lists container">
                 <a href="#" class="bottom__nav_logo">STREET 88</a>
             <ul class="nav__list">
-                <li class="nav__list_links"><a href="./first_index.html">Главная</a></li>
+                <li class="nav__list_links"><a href="./first-index.html">Главная</a></li>
                 <li class="nav__list_links"><a href="">Корзина</a></li>
                 <li class="nav__list_links"><a href="">Меню</a></li>
-                <li class="nav__list_links"><a href="./second_index.html">О нас</a></li>
+                <li class="nav__list_links"><a href="./second-index.html">О нас</a></li>
                 <li class="nav__list_links"><a href="">Контакты</a></li>
             </ul>
             </div>                
@@ -54,7 +54,7 @@
     <main class="main">
         <section class="description container">
             <div class="desription__img">
-                <img src="./img/page__two__body.jpg" alt="">
+                <img class="desc__img" src="./img/page__two__body.jpg" alt="">
                 <div class="decription__title">
                     <h2 class="desc__title">STREET 88</h2>
                 </div>
