--- a/second-index.html
+++ b/second-index.html
@@ -24,8 +24,13 @@
         <div class="bottom__nav">
             <div class="bottom__nav_lists container">
                 <a href="#" class="bottom__nav_logo">STREET 88</a>
+                <button class="bottom__nav_btn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             <ul class="nav__list">
-                <li class="nav__list_links"><a href="./first-index.html">Главная</a></li>
+                <li class="nav__list_links"><a href="./index.html">Главная</a></li>
                 <li class="nav__list_links"><a href="">Корзина</a></li>
                 <li class="nav__list_links"><a href="">Меню</a></li>
                 <li class="nav__list_links"><a href="./second-index.html">О нас</a></li>
