--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     <span></span>
                 </button>
             <ul class="nav__list">
-                <li class="nav__list_links"><a href="">Главная</a></li>
-                <li class="nav__list_links"><a href="">Корзина</a></li>
-                <li class="nav__list_links"><a href="">Меню</a></li>
+                <li class="nav__list_links"><a href="#!">Главная</a></li>
+                <li class="nav__list_links"><a href="#!">Корзина</a></li>
+                <li class="nav__list_links"><a href="#!">Меню</a></li>
                 <li class="nav__list_links"><a href="./second-index.html">О нас</a></li>
-                <li class="nav__list_links"><a href="">Контакты</a></li>
+                <li class="nav__list_links"><a href="#!">Контакты</a></li>
             </ul>
             </div>                
         </div>            
@@ -182,7 +182,7 @@
         </div>
         <ul class="footer__list">
             <li class="footer__list_link"><a href="#">Меню</a></li>
-            <li class="footer__list_link"><a href="#">О нас</a></li>
+            <li class="footer__list_link"><a href="./second-index.html">О нас</a></li>
             <li class="footer__list_link"><a href="#">Контакты</a></li>
         </ul>
 
